--- a/.github/workflows/devcontainer.yaml
+++ b/.github/workflows/devcontainer.yaml
@@ -21,6 +21,8 @@ jobs:
           tags: |
             type=schedule
             type=sha
+          flavor: |
+            latest=true
       - uses: docker/login-action@v1
         with:
           registry: ghcr.io
