--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,18 +3,20 @@
 {
 	"name": "Python 3",
 	"runArgs": ["--init"],
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "..",
-		"args": { 
-			// Update 'VARIANT' to pick a Python version: 3, 3.10, 3.9, 3.8, 3.7, 3.6
-			// Append -bullseye or -buster to pin to an OS version.
-			// Use -bullseye variants on local on arm64/Apple Silicon.
-			"VARIANT": "3.7",
-			// Options
-			"NODE_VERSION": "none"
-		}
-	},
+	// "build": {
+	// 	"dockerfile": "Dockerfile",
+	// 	"context": "..",
+	// 	"cacheFrom": "ghcr.io/skolorna/euphemism-devcontainer:sha-b103498",
+	// 	"args": { 
+	// 		// Update 'VARIANT' to pick a Python version: 3, 3.10, 3.9, 3.8, 3.7, 3.6
+	// 		// Append -bullseye or -buster to pin to an OS version.
+	// 		// Use -bullseye variants on local on arm64/Apple Silicon.
+	// 		"VARIANT": "3.7",
+	// 		// Options
+	// 		"NODE_VERSION": "none"
+	// 	}
+	// },
+	"image": "ghcr.io/skolorna/euphemism-devcontainer:sha-b103498",
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
