--- a/.github/workflows/devcontainer.yaml
+++ b/.github/workflows/devcontainer.yaml
@@ -3,7 +3,7 @@ name: Devcontainer
 on:
   push:
     paths:
-      - .devcontainer/**
+      - .devcontainer/Dockerfile
     branches:
       - main
 
